--- a/trunk/assets/scss/my-account.scss
+++ b/trunk/assets/scss/my-account.scss
@@ -130,6 +130,7 @@
                             display: block;
                             font-size: 16px;
                             margin-bottom: 16px;
+							text-align: start;
                         }
                     }
                 }
@@ -249,7 +250,7 @@
                         align-content: center;
                         align-items: center;
                         justify-content: center;
-                        
+
                         padding: 16px 0 16px 32px;
                         background-color: #fff;
                         @media(max-width: 782px){
