--- a/trunk/assets/scss/single-voting.scss
+++ b/trunk/assets/scss/single-voting.scss
@@ -630,6 +630,63 @@
 				.votings-list{
 					padding-top: 0;
 				}
+				.voting-links-grid{
+					.voting-links-card{
+						background-color: #FFFFFF;
+						border-radius: 24px;
+						border: 3px solid #000;
+						background: #FFF;
+						padding: 28px;
+						margin-bottom: 24px;
+					}
+					
+					h2{
+						color: #000;
+						font-family: 'Oswald';
+						font-size: 24px;
+						font-weight: 600;
+						line-height: 130%; 
+						letter-spacing: -0.24px;
+						text-transform: none;
+						margin-top: 0;	 	
+					}
+					P{
+						font-family: 'Inter';
+						font-size: 14px;
+						font-weight: 600;
+						line-height: 150%;
+						letter-spacing: -0.14px;
+						text-transform: uppercase;	
+					}
+					.voting-link{
+						button{
+							background-color: transparent;
+							border: none;
+							padding-left: 12px;
+						}
+						a{
+							color: #000;
+							font-family: 'Inter Tight';
+							font-size: 16px;
+							font-weight: 700;
+							letter-spacing: -0.16px;
+							text-decoration: none;	
+						}
+						.copy-button{
+							border-radius: 16px;
+							border: 3px solid #000;
+							background: #26A9F9;
+							color: #000;
+							font-family: 'Inter Tight';
+							font-size: 16px;
+							font-weight: 700;
+							letter-spacing: -0.16px;
+							margin-left: 20px;
+							padding: 10px 14px;	
+						}
+	
+					}		
+				}
 			}
 		}
 	}
