--- a/trunk/assets/scss/single-voting.scss
+++ b/trunk/assets/scss/single-voting.scss
@@ -578,6 +578,10 @@
 			}
 		}
 		.voting-content{
+			@media(max-width: 782px){
+				padding: 0
+			}
+			
 			.container{
 				margin: 0;
 				padding: 0;
@@ -599,6 +603,9 @@
 					line-height: 130%;
 					letter-spacing: -0.24px;
 					text-transform: uppercase;
+					@media(max-width: 782px){
+						font-size: 14px;
+					}
 				}
 
 				.panel-tab{
@@ -627,28 +634,84 @@
 				}
 			}
 			.wrapper{
+				@media(max-width: 782px){
+					padding-left: 15px;
+					padding-right: 15px;
+				}
 				.votings-list{
 					padding-top: 0;
 				}
+				
+			}
+			.wrapper-voting-links{
+				padding-top: 64px;
+				@media(max-width: 1180px){
+					padding-left: 50px;
+				}
+				@media(max-width: 1080px){
+					padding-left: 15px;
+				}
+				@media(max-width: 782px){
+					padding-left: 15px;
+					padding-right: 15px;
+				}
 				.voting-links-grid{
+					max-width: 1170px;
+					width: 100%;
+					margin-left: auto;
+					margin-right: auto;
+					display: grid;
+					grid-template-areas: "a c"
+										 "b c";
+						@media(max-width: 1080px){
+							display: block;
+						}				 
+					.voting-links-column{
+						max-width: 590px;
+						width: 100%;
+						@media(max-width: 1180px){
+							max-width: 490px;
+						}
+						@media(max-width: 1080px){
+							max-width: 590px;
+							margin-left: auto;
+							margin-right: auto;	
+						}
+					}
+					.voting-links-column:nth-child(2){
+						background-color: #FFFFFF;
+						border-radius: 24px;
+						border: 3px solid #000;
+						background: #FFF;
+						margin-bottom: 24px;
+						padding: 22px 0 29px 30px;
+						p{
+							margin-bottom: 30px;
+						}
+						.voting-links-scroll{
+							overflow-y: scroll;
+							height: 336px;
+						}	
+					}
 					.voting-links-card{
 						background-color: #FFFFFF;
 						border-radius: 24px;
 						border: 3px solid #000;
 						background: #FFF;
-						padding: 28px;
 						margin-bottom: 24px;
+						padding: 22px 30px 29px;
+						
 					}
-					
-					h2{
-						color: #000;
+					.voting-links-title{
+						color: #000; 
 						font-family: 'Oswald';
 						font-size: 24px;
 						font-weight: 600;
 						line-height: 130%; 
 						letter-spacing: -0.24px;
 						text-transform: none;
-						margin-top: 0;	 	
+						margin-top: 0;
+						margin-bottom: 10px;	 	
 					}
 					P{
 						font-family: 'Inter';
@@ -656,13 +719,17 @@
 						font-weight: 600;
 						line-height: 150%;
 						letter-spacing: -0.14px;
-						text-transform: uppercase;	
+						text-transform: uppercase;
+						margin-bottom: 12px;	
 					}
 					.voting-link{
 						button{
 							background-color: transparent;
 							border: none;
-							padding-left: 12px;
+							padding-left: 7px;
+							img{
+								margin-right: 5px;
+							}
 						}
 						a{
 							color: #000;
@@ -684,8 +751,32 @@
 							margin-left: 20px;
 							padding: 10px 14px;	
 						}
-	
-					}		
+					}
+					.link-primary{
+						background-color: #FFF766;
+						border-radius: 80px;
+						border: 3px solid #000;
+						padding: 13px 24px 9px;
+						color: #000;
+						font-family: 'Oswald';
+						font-size: 24px;
+						font-weight: 500;
+						line-height: 130%;
+						letter-spacing: -0.24px;
+						text-decoration: none;
+						position: relative;
+						top: 40px;
+						@media(max-width: 782px){
+							font-size: 16px;
+							padding: 6px 16px;	
+						}
+						&:hover{
+							background-color: transparent;
+							color: #000;
+							border: 3px solid #000;
+							background-color: #FFF766;
+						}	
+					}			
 				}
 			}
 		}
