--- a/trunk/assets/scss/my-account.scss
+++ b/trunk/assets/scss/my-account.scss
@@ -258,7 +258,8 @@
                             text-decoration: none;
                             @media(max-width: 782px){
                                 font-size: 16px;
-                                padding: 6px 16px;	
+                                display: flex;
+                                align-items: center;
                             }
                             &:hover{
                                 background-color: transparent;
@@ -270,22 +271,20 @@
 
                     }    
                     details{
-                        height: 68px;
-                        max-width: 270px;
                         width: 100%;
+                        cursor: pointer;
                         border-radius: 16px;
                         border: 3px solid #000;
                         background: var(--wp--preset--color--high-pure);
                         height: 68px;
                         max-width: 273px;
-                        margin-left: 5px;
-                        flex-direction: row;
-                        align-content: center;
                         align-items: center;
                         justify-content: center;
-
-                        padding: 16px 0 16px 32px;
                         background-color: #fff;
+                        padding: 0px;
+                        margin: 0px;
+                        display: flex;
+                        flex-direction: row;
                         @media(max-width: 782px){
                             margin-left: 15px;
                         }
@@ -322,8 +321,7 @@
                         }
                         .filters-open{
                             display: flex;
-                            width: 100%;
-                            position: absolute;
+                            position: relative;
                             justify-content: center;
                             color: #111;
                             font-family: "Inter Tight";
@@ -332,16 +330,41 @@
                             line-height: 150%;
                             background-color: white;
                             flex-direction: column;
-                            margin-top: 11px;
+                            margin-top: 3px;
+                            margin-left: -3px;
+                            margin-right: -3px;
                             border: 3px solid black;
                             border-top: none;
                             padding-left: 32px;
                             padding-right: 32px;
+                            padding-top: 16px;
+                            padding-bottom: 16px;
+                            border-radius: 0 0 16px 16px;
+                        
+                        
+                        
                             .radio-options{
                                 display: flex;
-                                gap: 5px;
                                 flex-direction: column;
+                               
+                                label {
+                                    margin:0px;
+                                    margin-bottom: 8px;                                    
+                                }
+                                label span{
+                                    color: var(--low-dark, #000);
+                                    font-family: Oswald;
+                                    font-size: 24px;
+                                    font-style: normal;
+                                    font-weight: 500;
+                                    line-height: normal;
+                                    letter-spacing: -0.24px;
+                                    padding: 8px;
+                                    cursor: pointer;
+                                    margin-bottom: 20px;
+                                }
                             }
+                            
                         }
                     }
                 }
