finaliza estilo do form de criacao de votacao para o plugin

--- a/trunk/assets/scss/archive-voting.scss
+++ b/trunk/assets/scss/archive-voting.scss
@@ -1,7 +1,8 @@
 @import 'settings/mixins';
 @import 'components/voting-card';
 
-.voting-archive {
+.voting-archive,
+.post-type-archive-voting  {
 	margin: auto;
 	max-width: 1200px;
 	padding-inline: 15px;
