--- a/trunk/assets/scss/voting-page.scss
+++ b/trunk/assets/scss/voting-page.scss
@@ -8,6 +8,12 @@
 	width: 100%;
 	margin-left: auto;
 	margin-right: auto;
+	form{
+		@media (max-width: 782px){
+			padding-left: 15px;
+			padding-right: 15px;
+		}
+	}
 	
 	.field-checkbox{
 		margin-top: 30px;
@@ -24,6 +30,10 @@
 				font-family: 'Inter Tight';
 			}		
 		}
+	}
+	textarea{
+		border-radius: 8px;
+		border-color: #000;
 	}
 	.title-section{
 		font-family: 'Oswald';
@@ -71,6 +81,7 @@
 		label{
 			font-weight: bold;
 			font-family: 'Inter Tight', sans-serif;
+			color: #000;
 		}
 	}
 	.option{
@@ -83,7 +94,8 @@
 		line-height: 130%;
 		letter-spacing: -0.24px;
 		font-weight: 500;
-		margin-bottom: 11px;     
+		margin-bottom: 11px;
+		color: #000;     
 		}
 	}
 
