ajuste no navbar

--- a/trunk/assets/scss/components/navbar-mobile.scss
+++ b/trunk/assets/scss/components/navbar-mobile.scss
@@ -6,11 +6,9 @@
         display: flex;
         position: fixed;
         z-index: 999;
-        /* padding-top: 470px; */
+        margin-top: 370px;
         align-items: center;
         text-align: center;
-        width: 100%;
-        height: 115%;
         justify-content: center;
     }
     button{
