ajuste para o navbar aparecer só para celular

--- a/trunk/assets/scss/components/navbar-mobile.scss
+++ b/trunk/assets/scss/components/navbar-mobile.scss
@@ -2,7 +2,7 @@
 
 .navbar-mobile{
     display: none;
-    @include mobile{
+    @include small{
         display: flex;
         position: fixed;
         z-index: 999;
