ajustes detalhes da votacao

--- a/trunk/assets/scss/single-voting.scss
+++ b/trunk/assets/scss/single-voting.scss
@@ -245,7 +245,7 @@
 			}
 
 			.content {
-				padding-top: 63px;
+				padding-top: 57px;
 				h2{
 					color: #111;
 					font-family: 'Oswald';
@@ -254,6 +254,7 @@
 					line-height: 130%;
 					letter-spacing: -0.32px;
 					text-transform: uppercase;
+					margin-bottom: 57px;
 				}
 				.option-voting {
 					align-items: center;
