--- a/trunk/assets/scss/single-voting.scss
+++ b/trunk/assets/scss/single-voting.scss
@@ -14,7 +14,7 @@
 		padding-top: 3.8rem;
 		border-bottom: 3px solid #000;
 		@media(max-width: 781px){
-			padding: 16px 15px;
+			padding: 16px 15px 32px;
 		}
 
 		.container {
@@ -50,13 +50,19 @@
 			.voting-title {
 				font-size: 48px;
 				margin-bottom: 16px;
-				margin-top: 16px;
+				margin-top: 17px;
 				line-height: 112%;
 				letter-spacing: -0.48px;
 				margin-top: 8px;
 				font-family: 'Oswald';
 				text-transform: uppercase;
 				font-weight: 700;
+				@media(max-width: 782px){
+					font-size: 32px;
+					line-height: 130%;
+					margin-bottom: 23px;
+					
+				}
 			}
 
 			p{
@@ -68,6 +74,9 @@
 				line-height: 130%;
 				letter-spacing: -0.2px;
 				text-transform: uppercase;
+				@media(max-width: 782px){
+					margin-bottom: 0;
+				}
 			}
 
 			.meta {
@@ -76,9 +85,10 @@
 				gap: 16px;
 				margin-top: 16px;
 
-				@include mobile {
+				@media(max-width: 782px) {
 					align-items: flex-start;
 					flex-direction: column;
+					margin-top: 0.6rem;
 				}
 
 				.list-terms {
@@ -89,6 +99,9 @@
 					display: flex;
 					gap: 8px;
 					padding-left: 0;
+					@media(max-width: 782px){
+						display: none;
+					}
 
 					li {
 						border-radius: 16px;
@@ -126,7 +139,7 @@
 
 			@include mobile {
 				max-width: 100%;
-				padding-top: size(32);
+				padding-top: size(16);
 			}
 
 			h3{
@@ -134,7 +147,7 @@
 				font-size: 24px;
 				line-height: 130%;
 				letter-spacing: -0.24px;
-				font-weight: 500;
+				font-weight: 600;
 				color: #000;
 			}
 
@@ -227,8 +240,8 @@
 		background-color: #F5F5F5;
 		border-top: 3px solid #000000;
 		padding-bottom: size(48);
-		@media(max-width: 781px){
-			padding: 16px 15px;
+		@media(max-width: 782px){
+			padding: 16px 15px 32px;
 		}
 
 		.wrapper {
@@ -419,7 +432,7 @@
 				padding-top: size(64);
 
 				@include mobile {
-					padding-top: size(32);
+					padding-top: size(16);
 				}
 
 				.option-voting-grid {
