--- a/trunk/assets/scss/components/navbar-mobile.scss
+++ b/trunk/assets/scss/components/navbar-mobile.scss
@@ -2,7 +2,7 @@
 
 .navbar-mobile{
     display: none;
-    @include mixins.small{
+    @include small{
         display: flex;
         position: fixed;
         z-index: 999;
@@ -10,6 +10,7 @@
         align-items: center;
         text-align: center;
         justify-content: center;
+        width: 100%;
     }
     button{
         padding: 0px;
