--- a/trunk/assets/scss/my-account.scss
+++ b/trunk/assets/scss/my-account.scss
@@ -184,9 +184,10 @@
             .my-account-panel{
                 background-color: #f5f5f5;
                 @media(max-width: 1210px){
-					.cont
+					.cont{
                     padding-left: 15px;
                     padding-right: 15px;
+                    }
                 }
                 @media(max-width: 782px){
                     padding-right: 0;
