--- a/trunk/assets/scss/atoms/buttons.scss
+++ b/trunk/assets/scss/atoms/buttons.scss
@@ -15,8 +15,8 @@ button {
 		border-radius: 80px !important;
 		background-color: #FFFFFF !important;
 		border-radius: 50px !important;
-		border: 3px solid #000 !important; 
-		padding: 9px 32px !important;	
+		border: 3px solid #000 !important;
+		padding: 9px 32px !important;
 	}
 
 	&.disabled {
@@ -34,12 +34,12 @@ button {
 		line-height: 130% !important;
 		letter-spacing: -0.24px !important;
 		@media(max-width: 782px){
-			font-size: 16px !important;	
+			font-size: 16px !important;
 		}
 		&:hover{
 			background-color: transparent !important;
 			color: #000 !important;
-		}	
+		}
 	}
 
 	&.primary {
@@ -55,21 +55,43 @@ button {
 		letter-spacing: -0.24px !important;
 		@media(max-width: 782px){
 			font-size: 16px !important;
-			padding: 6px 16px !important;	
+			padding: 6px 16px !important;
 		}
 		&:hover{
 			background-color: transparent !important;
 			color: #000 !important;
 			border: 3px solid #000 !important;
 			background-color: #FFF766 !important;
-		}	
+		}
+	}
+	&.danger {
+		background-color: #FF2E22 !important;
+		border-radius: 80px !important;
+		border: 3px solid #000 !important;
+		padding: 9px 24px 11px !important;
+		color: white !important;
+		font-family: 'Oswald' !important;
+		font-size: 24px !important;
+		font-weight: 500 !important;
+		line-height: 130% !important;
+		letter-spacing: -0.24px !important;
+		@media(max-width: 782px){
+			font-size: 16px !important;
+			padding: 6px 16px !important;
+		}
+		&:hover{
+			background-color: transparent !important;
+			color: white !important;
+			border: 3px solid #000 !important;
+			background-color: #FF2E22 !important;
+		}
 	}
 	&.close{
 		background-color: transparent !important;
 		border: none !important;
 		&:hover{
 			background-color: transparent !important;
-		}	
+		}
 	}
 	&.edit{
 		background-color: transparent !important;
@@ -77,13 +99,13 @@ button {
 		color: #000!important;
 		font-family: 'Inter' !important;
 		font-weight: 600 !important;
-		line-height: 150% !important; 
+		line-height: 150% !important;
 		letter-spacing: -0.12px !important;
 		text-transform: uppercase !important;
 		border-bottom: 3px solid #000 !important;
 		&:hover{
 			background-color: transparent !important;
-		}		
+		}
 	}
 	&.delete-acount{
 		background-color: transparent !important;
@@ -91,12 +113,12 @@ button {
 		color: #FF2E22!important;
 		font-family: 'Inter' !important;
 		font-weight: 600 !important;
-		line-height: 150% !important; 
+		line-height: 150% !important;
 		letter-spacing: -0.12px !important;
 		text-transform: uppercase !important;
 		border-bottom: 3px solid #FF2E22 !important;
 		&:hover{
 			background-color: transparent !important;
-		}	
+		}
 	}
-}	
+}
