ajuste no modo responsivo em my account

--- a/trunk/assets/scss/my-account.scss
+++ b/trunk/assets/scss/my-account.scss
@@ -55,7 +55,9 @@
                 display: grid;
                 grid-template-columns: 1.4fr 1fr;
                 @media(max-width: 782px){
-                    display: block;
+                    display: flex;
+                    flex-direction: column;
+                    margin-left: 16px;
                 }
                 h2{
                     font-size: 32px;
@@ -65,8 +67,12 @@
                     font-weight: 500;
                     letter-spacing: -0.32px;
                     text-transform: uppercase;
-                    margin-top: 63px;
-                    margin-bottom: 41px;
+                    margin-top: 64px;
+                    margin-bottom: 64px;
+                    @include mobile{
+                        margin-top: 42px;
+                        margin-bottom: 16px;
+                    }
                 }
 				.content.panel {
 					@media(max-width: 1210px){
@@ -76,9 +82,7 @@
 				}
                 .my-account-box:nth-of-type(1){
                     border-right: 3px solid #000;
-                    padding-bottom: 115px;
                     @media(max-width: 782px){
-                        padding-bottom: 0;
                         border-right: none;
                     }
                     .container{
@@ -86,11 +90,15 @@
                         width: 100%;
                         margin-left: auto;
                         margin-right: 0;
+                        margin-top: 64 0px;
                         padding-left: 0;
                     }
                     .my-account-field{
                         display: inline-block;
                         margin-right: 125px;
+                        @include mobile{
+                            margin-top: 31px;
+                        }
                         dt{
                             font-family: 'Inter';
                             font-size: 20px;
@@ -109,6 +117,11 @@
                             letter-spacing: -0.24px;
                             color: #000;
                             margin-bottom: 10px;
+                            @include mobile{
+                                font-weight: 500;
+                                margin-top: 16px;
+                                margin-bottom: 16px;
+                            }
                         }
                         .edit{
                             font-size: 12px;
@@ -119,20 +132,41 @@
                 }
                 .my-account-box:nth-of-type(2){
                     .container{
+                        display: flex;
+                        margin-left: 62px;
+                        flex-direction: column;
+                        align-items: flex-start;
+                        margin-bottom: 93px;
                         margin-left: 62px;
                         @media(max-width: 782px){
                             margin-left: 0;
-                            padding-bottom: 70px;
+                            padding-bottom: 0px;
+                            margin-bottom: 70px;
                             padding-left: 0;
+                            gap: 16px;
                         }
                         h2{
-                            margin-bottom: 38px;
+                            @include mobile{
+                                margin-bottom: 38px;
+                            }
+
+                        }
+                        button{
                         }
                         .edit{
                             display: block;
                             font-size: 16px;
                             margin-bottom: 16px;
 							text-align: start;
+                            @include mobile{
+                                color: #000;
+                                font-family: Inter;
+                                font-size: 12px;
+                                font-style: normal;
+                                font-weight: 600;
+                                line-height: 150%; /* 18px */
+                                letter-spacing: -0.12px;
+                                text-transform: uppercase;                            }
                         }
                     }
                 }
