--- a/trunk/assets/scss/components/voting-card.scss
+++ b/trunk/assets/scss/components/voting-card.scss
@@ -17,7 +17,6 @@
 			margin-top: 3px;
 		}
 	}
-	
 
 	main {
 		padding: 2rem;
@@ -74,7 +73,7 @@
 		display: flex;
 		gap: 8px;
 		margin: 0;
-		padding: 0;
+		padding: 16px 0 0;
 
 		li {
 			border: 3px solid #EDE103;
@@ -99,7 +98,7 @@
 			font-size: 16px;
 			font-weight: 700;
 			line-height: 150%;
-			letter-spacing: -0.16px;	
+			letter-spacing: -0.16px;
 		}
 
 		header {
@@ -115,11 +114,11 @@
 			font-size: 16px;
 			font-weight: 700;
 			line-height: 150%;
-			letter-spacing: -0.16px;	
+			letter-spacing: -0.16px;
 		}
 
 		header {
-			
+
 			background-color: #26A9F9;
 		}
 	}
@@ -131,11 +130,11 @@
 			font-size: 16px;
 			font-weight: 700;
 			line-height: 150%;
-			letter-spacing: -0.16px;	
+			letter-spacing: -0.16px;
 		}
 		header {
-			background-color: #FF2E22;	
-			
+			background-color: #FF2E22;
+
 		}
 	}
 }
