--- a/trunk/assets/scss/components/voting-card.scss
+++ b/trunk/assets/scss/components/voting-card.scss
@@ -1,3 +1,13 @@
+
+.voting-archive-grid{
+	a{
+		&:hover{
+			opacity: inherit;
+		}
+	}
+
+}
+
 .voting-card {
 	border: 3px solid black;
 	border-radius: 16px;
