create button faq and update plugin version

--- a/trunk/assets/scss/plugin.scss
+++ b/trunk/assets/scss/plugin.scss
@@ -1,7 +1,24 @@
 @import 'settings/typography';
 @import 'settings/globals';
-
 @import 'components/navbar-mobile';
+
+.button-faq{
+    background-color: var(--wp--preset--color--primary-pure);
+    color: var(--wp--preset--color--low-dark);
+    border: 3px solid #000;
+    font-family: Oswald;
+    font-size: 1.5rem;
+    letter-spacing: -.24px;
+    font-weight: 500;
+    padding: 3px 23px 7px;
+    box-shadow: 4px 4px 0 0 #000;
+    position: fixed;
+    right: 32px;
+    border-radius: 32px;
+    bottom: 16px;
+    text-decoration: none;
+}
+
 
 
 
