Add position sticky on sidebar votes

--- a/trunk/assets/scss/single-voting.scss
+++ b/trunk/assets/scss/single-voting.scss
@@ -6,6 +6,10 @@
 
 .single-voting {
 
+	#app {
+		overflow: visible;
+	}
+
 	.voting-header {
 		background-color: #FFFFFF;
 		padding-bottom: size(32);
@@ -416,8 +420,8 @@
 						text-transform: uppercase;
 						@media(max-width: 782px){
 							display: none;
-						}			
-					}	
+						}
+					}
 					form{
 						margin-top: 77px;
 						@media(max-width: 782px){
@@ -467,6 +471,16 @@
 					padding-top: 40px;
 				}
 
+				&-content {
+					position: sticky;
+					top: 150px;
+
+					@include mobile {
+						position: relative;
+						top: 0;
+					}
+				}
+
 				.options-title-mobile{
 					color: #111;
 					font-family: 'Oswald';
@@ -511,7 +525,7 @@
 						margin: 20px 0 25px;
 						@media(min-width: 782px){
 						display: none;
-						}	
+						}
 					}
 					p{
 						color: #111;
@@ -525,7 +539,7 @@
 						text-transform: uppercase;
 						@media(min-width: 782px){
 							display: none;
-						}		
+						}
 					}
 					.end-date{
 						font-size: 12px;
@@ -535,8 +549,8 @@
 						margin-bottom: 30px;
 						@media(min-width: 782px){
 							display: none;
-						}			
-					}	
+						}
+					}
 					.option-voting-grid {
 						&__cell {
 							background-color: #111;
