ajusta botao de ver resultados detalhados na single de votacao

--- a/trunk/assets/scss/single-voting.scss
+++ b/trunk/assets/scss/single-voting.scss
@@ -594,11 +594,10 @@
 				font-weight: medium;
 				letter-spacing: 0.24px;
 				line-height: 130%;
-				max-width: 278px;;
 				padding: 10px 27px 8px;
 				justify-content: center;
 				text-decoration: none;
-				width: 100%;
+				width: auto;
 			}
 
 			.back-link {
